# robot-support

./: README.md
.github/workflows/: ci_Focal_Melodic.yml
end_effectors/nikon_d5600_support/: CMakeLists.txt  package.xml
end_effectors/nikon_d5600_support/launch/: load_gp7_d5600.launch  test_gp7_d5600.launch
end_effectors/nikon_d5600_support/meshes/: EEF_assembly_v1_rot_collision.STL  EEF_assembly_v1_rot_visual.STL
end_effectors/nikon_d5600_support/urdf/: d5600.xacro  d5600_macro.xacro  d5600_rot_macro.xacro  gp7_cart_d5600.xacro  gp7_cart_d5600_rot.xacro  gp7_d5600.xacro
environment/robot_cart/: CMakeLists.txt  package.xml
environment/robot_cart/launch/: load_gp7_cart.launch  test_gp7_cart.launch
environment/robot_cart/meshes/: robot_cart_collision.stl  robot_cart_collision_back.stl  robot_cart_visual_3.stl  robot_cart_visual_back.stl
environment/robot_cart/urdf/: cart_macro.xacro  gp7_cart_macro.xacro
launch/: connect_gp7.launch
motoman/motoman/: package.xml
motoman/motoman_gp7_moveit_config/: .setup_assistant  package.xml
motoman/motoman_gp7_moveit_config/config/: motoman_gp7.srdf  ros_controllers.yaml
motoman/motoman_gp7_moveit_config/launch/: demo_gazebo.launch  gazebo.launch
moveit_configs/motoman_gp7_moveit_config/: .setup_assistant  package.xml
moveit_configs/robot_gp7_d5600_moveit_cofig/: .setup_assistant  CMakeLists.txt
moveit_configs/robot_gp7_d5600_moveit_config/: CMakeLists.txt  package.xml
moveit_configs/robot_gp7_d5600_rot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+49 files in other folders)
