<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>nikon_d5600_support</name>
  <version>0.0.1</version>
  <description>
    <p>Custom End Effector for D5600 Camera</p>
  </description>
  <author>acbuynak</author>
  <maintainer email="acbuynak@gmail.com">acbuynak</maintainer>
  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/osu-capstone-afrl/robot-support/issues</url>
  <url type="repository">https://github.com/osu-capstone-afrl/robot-support</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>motoman_gp7_support</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
